--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -1,18 +1,187 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".UserInfo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserInfo">
+    android:background="#B2EBF2">
+
+
+    <TextView
+        android:id="@+id/textViewHeight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="62dp"
+        android:text="Height: "
+        android:textColor="#424242"
+        android:textSize="24sp" />
+
+    <EditText
+        android:id="@+id/inputWeight"
+        android:layout_width="164dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textViewHeight"
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textViewCM"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/textViewKG"
+        android:layout_alignTop="@+id/textViewHeight"
+        android:text="cm."
+        android:textColor="#424242"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textViewWeight"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/textViewHeight"
+        android:layout_marginTop="114dp"
+        android:text="Weight: "
+        android:textColor="#424242"
+        android:textSize="24sp" />
+
+    <EditText
+        android:id="@+id/inputHeight"
+        android:layout_width="164dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/textViewHeight"
+        android:layout_centerHorizontal="true"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textViewKG"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignTop="@+id/textViewWeight"
+        android:layout_marginEnd="63dp"
+        android:text="kg"
+        android:textColor="#424242"
+        android:textSize="24sp" />
+
+    <TextView
+        android:id="@+id/textViewBMI"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="350dp"
+        android:text="Your BMI is"
+        android:layout_marginLeft="10dp"
+        android:textAllCaps="false"
+        android:textColor="#424242"
+        android:textSize="24sp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:id="@+id/BMILabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="350dp"
+        android:layout_marginLeft="150dp"
+        android:text=""
+        android:textSize="24sp"
+        android:textStyle="italic" />
+    <TextView
+        android:id="@+id/caloriesLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="270dp"
+        android:text=""
+        android:textColor="@android:color/black"
+        android:textSize="26sp"
+        android:textStyle="bold|italic"  />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="400dp"
+        android:layout_marginLeft="10dp"
+        android:text="Calories need per day"
+        android:textColor="@android:color/black"
+        android:textSize="26sp"
+        android:textStyle="bold|italic" />
+
+    <Button
+        android:id="@+id/btnEnter"
+        android:layout_width="334dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="280dp"
+        android:background="#00BCD4"
+        android:text="Enter" />
+
+    <Switch
+        android:id="@+id/genderSwitch"
+        android:layout_width="103dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignStart="@+id/textViewHeight"
+        android:layout_marginTop="164dp"
+        android:text="Male"
+        android:textColor="#424242"
+        android:textSize="24sp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignTop="@+id/genderSwitch"
+        android:layout_toEndOf="@+id/genderSwitch"
+        android:text="Female"
+        android:textColor="#424242"
+        android:textSize="24sp" />
 
-</android.support.constraint.ConstraintLayout>
+    <Button
+        android:id="@+id/btnBack"
+        android:layout_width="60dp"
+        android:layout_height="36dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:background="#B2EBF2"
+        android:textColor="#9E9E9E"
+        android:text="Back" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/inputWeight"
+        android:layout_alignTop="@+id/genderSwitch"
+        android:text="Age: "
+        android:textSize="24sp" />
+
+    <EditText
+        android:id="@+id/inputAge"
+        android:layout_width="66dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/inputWeight"
+        android:layout_toEndOf="@+id/inputWeight"
+        android:textSize="24sp" />
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="333dp"
+        android:layout_height="39dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="218dp"
+        android:background="#80DEEA" />
+
+
+
+</RelativeLayout>
