--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -148,6 +148,7 @@
 
     <Button
         android:id="@+id/btnBack"
+        android:onClick="backButton"
         android:layout_width="60dp"
         android:layout_height="36dp"
         android:layout_alignParentStart="true"
